<resources>
    <string name="app_name">GoMail</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="to_username_email">To (username/email)</string>
    <string name="cancel">Cancel</string>
    <string name="inbox">Inbox</string>
    <string name="search_in_mail">Search in mail</string>
    <string name="gomail">GoMail</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="date">Date</string>
    <string name="mail_body_here">Mail body here</string>
    <string name="spam">Spam</string>
    <string name="important">Important</string>
    <string name="delete">Delete</string>
    <string name="move_to_label">Move to Label</string>
    <string name="gomail_logo">GoMail Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register_here">No account? Register here</string>
    <string name="full_name">Full Name</string>
    <string name="email_username">Email (Username)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pick_profile_image">Pick Profile Image</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sender_name">Sender Name</string>
    <string name="subject_here">Subject here</string>
    <string name="message_preview_snippet_goes_here">Message preview snippet goes here</string>
    <string name="_12_45">12:45</string>
    <string name="drafts">Drafts</string>
    <string name="add_label">Add Label</string>
    <string name="logout">Logout</string>
</resources>
