<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/gomailLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/gomail_logo"
            android:contentDescription="@string/gomail_logo"
            android:layout_marginTop="32dp"/>


        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name" />

        <EditText
            android:id="@+id/editTextRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_username" />

        <EditText
            android:id="@+id/editTextRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextRegisterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonPickImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_profile_image" />

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

        <TextView
            android:id="@+id/textLoginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:textColor="#5555FF"
            android:paddingTop="12dp"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>
