<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center">


    <ImageView
        android:id="@+id/gomailLogo"
        android:layout_width="150dp"
        android:layout_height="154dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/gomail_logo"
        android:src="@drawable/gomail_logo" />

    <EditText
        android:id="@+id/editTextUsername"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_register_here"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:paddingTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold" />

</LinearLayout>
